--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "chromedriver": "^124.0.1",
     "icons": "^1.0.0",
-    "next": "13.4.5",
-    "postcss": "8.4.24",
+    "next": "^13.5.6",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "selenium-webdriver": "^4.20.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
