--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "autoprefixer": "10.4.14",
     "chromedriver": "^124.0.1",
     "icons": "^1.0.0",
